--- a/modules/1237/pages/page2-bottom-text.adoc
+++ b/modules/1237/pages/page2-bottom-text.adoc
@@ -30,7 +30,7 @@ An Ewr. Durchlauchten und der
 Hochgräflichen Gnaden ergehet daher meine
 ____
 
-== Transliteration
+== Translation
 
 [verse, Translation]
 ____
