--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -6,3 +6,5 @@
 ** xref:page2.adoc[]
 ** xref:page2-honorifics.adoc[]
 ** xref:page2-bottom-text.adoc[]
+* TODO: Complete page three
+** xref:page3-left-bot.adoc[]
