--- a/modules/1237/pages/page3-left-bot.adoc
+++ b/modules/1237/pages/page3-left-bot.adoc
@@ -29,27 +29,27 @@ ____
 
 [verse]
 ____
-Mir jene Ecke gnädigst <1> für
-einen billigen Preis <2> käuflich zu
-überlassen <3> und dieselbe deßhalb
-baldigst <4> besichtigen und ausmessen <5>
+Mir jene Ecke gnädigst [1] für
+einen billigen Preis [2] käuflich zu
+überlassen [3] und dieselbe deßhalb
+baldigst [4] besichtigen und ausmessen [5]
 zu lassen.
 
-In tiefster Ehrfurcht verharre ich <6>
-Ewr. <7> Durchlauchten <8>
+In tiefster Ehrfurcht verharre ich [6]
+Ewr. [7] Durchlauchten [8]
 und
-Ewr. <7> Hochgräflichen Gnaden <9>
+Ewr. [7] Hochgräflichen Gnaden [9]
 ____
 
-<1> *gnädigst* – “most graciously,” a term of deference common in petitions to noble authorities.  
-<2> *einen billigen Preis* – “a fair/reasonable price,” indicating humility and fairness.  
-<3> *überlassen* – “to cede, grant, or transfer,” often phrased as a privilege conferred by the authority.  
-<4> *baldigst* – “as quickly as possible,” a superlative form for emphasis.  
-<5> *ausmessen* – “to measure or survey land,” used when referring to property or garden expansion.  
-<6> *In tiefster Ehrfurcht verharre ich* – “I remain in deepest reverence,” akin to “Your humble and obedient servant.”  
-<7> *Ewr.* – Abbreviation for *Euer/Eure*, “Your” (formal).  
-<8> *Durchlauchten* – “Serene Highness,” a princely title.  
-<9> *Hochgräflichen Gnaden* – “High Comital Grace,” a title for counts or countesses.
+[1] *gnädigst* – “most graciously,” a term of deference common in petitions to noble authorities.  
+[2] *einen billigen Preis* – “a fair/reasonable price,” indicating humility and fairness.  
+[3] *überlassen* – “to cede, grant, or transfer,” often phrased as a privilege conferred by the authority.  
+[4] *baldigst* – “as quickly as possible,” a superlative form for emphasis.  
+[5] *ausmessen* – “to measure or survey land,” used when referring to property or garden expansion.  
+[6] *In tiefster Ehrfurcht verharre ich* – “I remain in deepest reverence,” akin to “Your humble and obedient servant.”  
+[7] *Ewr.* – Abbreviation for *Euer/Eure*, “Your” (formal).  
+[8] *Durchlauchten* – “Serene Highness,” a princely title.  
+[9] *Hochgräflichen Gnaden* – “High Comital Grace,” a title for counts or countesses.
 
 == Glossary
 
