--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -7,4 +7,5 @@
 ** xref:page2-honorifics.adoc[]
 ** xref:page2-bottom-text.adoc[]
 * TODO: Complete page three
+** xref:page3-opposite-pg-main-text.adoc[]
 ** xref:page3-left-bot.adoc[]
