--- a/modules/1237/pages/image2-honorifics.adoc
+++ b/modules/1237/pages/image2-honorifics.adoc
@@ -1,4 +1,4 @@
-= Page2, Honorifics
+= Image 2, Honorifics
 :page-role: wide
 
 This text appears to the right of the main text of the proceedings. It is written much smaller.
