--- a/modules/1237/pages/image12.adoc
+++ b/modules/1237/pages/image12.adoc
@@ -2,42 +2,79 @@
 :page-role: wide
 
 image::0012.png[link=self]
+[verse]
+____
+Concept Cammeral-Kaufbriefs                                            6.  
+für den Colon Kruckeberg  
+Nr: 10 zu Berenbusch über  
+einen Platz zur Vergrößerung  
+seines Gartens.
+
+                     Nachdem auf Ansuchen des Colons  
+                     Jobst Heinrich Krückeberg Nr. 10  
+                     zu Berenbusch, Amts Bückeburg,  
+                     von Gräfl. vormundschaftl. Rentcammer  
+                     bewilliget worden, daß demselben  
+                     zur Vergrößerung seines Gartens  
+                     und Hofraums zweÿ in der Dorfstraße  
+                     belegene Plätze ausgewiesen, und  
+                     dergestalt käuflich überlaßen werden  
+                     sollen, daß er jede Quadrat i Rüte  
+                     mit 24 Mariengroschen zu bezahlen  
+Expedirt p. Beÿer    habe; und hiernächst diese Plätze durch  
+                     einen beeidigten Landmeßer, und zwar  
+                     ersterer zur Vergrößerung seines  
+                     Gartens zu neunzehn Ruten 44 Fus dec:  
+                     und der andere zum Hofraum, zu  
+                     einer Rute 90 Fus dec: gros ausge-  
+                     meßen, auch das Kaufgeld nach dem  
+                     bestimten Preise mit vierzehn Rthlr  
+                     8 ugln 1d an Gräfln Cammercasse  
+                     erleget worden; wobeÿ gedachter  
+                     Colon Krückeberg verpflichtet ist  
+                     den von bemeldeten beiden Plätzen  
+                     angesetzten Rottzins und Kontri-  
+                     bution, auch sowohl gewöhnliche  
+                     als außerordentliche Abgaben  
+                     zu ...[continues on next image]
+____
+
+
+== Translation
 
 [verse]
 ____
-Concept Cammeral-Kaufbriefs                          6.
-für den Colon Kruckeberg
-Nr: 10 zu Barenbusch über
-einen Platz zur Vergrößerung
-seines Gartens,
+Concept of the Cammeral Purchase Contract  
+for the colonist Krückeberg  
+No. 10 at Berenbusch,  
+concerning a plot of land for the enlargement  
+of his garden.
 
-                          Nachdem auf Ansuchen des Colons
-                          Jobst Heinrich Kückeberg Nr. 10
-                          zu Berenbusch, Amts Bückeburg
-                          von Grafl. vormundschaftl. Rentcammer
-                          bewilliget worden, daß demselben
-                          zur Vergrößerung seines Gartens
-                          und Hofraums zweÿ in der Dorfstraße
-                          belegene Plätze ausgewiesen, und
-                          bis
-                          dergestalt käuflich überlaßen werden
-                          sollen, daß er jede Quadrat i Rüte
-                          mit 24 Mariengroschen zu bezahlen
-Expedirt p. Beÿer         habe; und hiernächst diese Plätze durch
-                          einen beeidigten Landmeßer, und zwar
-                          ersterer zur Vergrößerung seines
-                           Gartens zu neunzehn Ruten 44 Fus dec¬
-                          und der andere zum Hofraum, zu
-                          einer Rute 90 Fus dec: gros ausge¬
-                          meßen, auch das Kaufgeld nach dem
-                          bestimten Preise mit vierzehn Rthlr
-                          8 ugln 1d an Gräfln Cammercasse
-                          erleget worden; wobey gedachter
-                          Colon Kruckeberg verpflichtet ist
-                          den von bemeldeten beiden Plätzen
-                          angesetzten Rottzins und Kontri¬
-                          bution, auch sowohl gewöhnliche
-                          als außerordentliche Abgaben
-                          zu
-
+                      After, upon the petition of the colonist  
+                      Jobst Heinrich Krückeberg No. 10  
+                      at Berenbusch, jurisdiction of Bückeburg,  
+                      the Comital Guardianship Chamber Office  
+                      granted approval that the petitioner  
+                      be assigned two plots of land located  
+                      along the village street for the purpose  
+                      of enlarging his garden and yard space,  
+                      and that these plots be sold to him  
+                      under the condition that he pay 24 Mariengroschen  
+Issued by Beÿer       per square rod; and that these plots  
+                      were then surveyed by a sworn land surveyor —  
+                      the first, for enlarging his garden,  
+                      measured nineteen rods and 44 feet,  
+                      and the second, for the yard space,  
+                      measured one rod and 90 feet —  
+                      also that the purchase money, according to  
+                      the established price, in the amount of  
+                      14 Reichsthaler, 8 Groschen, and 1 Pfennig  
+                      was paid to the Comital Chamber treasury;  
+                      whereby the said  
+                      colonist Krückeberg is obligated  
+                      to pay the established ground rent and  
+                      contribution for the aforementioned plots,  
+                      as well as both regular and extraordinary taxes and dues to
+                      [continues on next page] 
 ____
+
