--- a/modules/1237/pages/image12.adoc
+++ b/modules/1237/pages/image12.adoc
@@ -10,33 +10,35 @@ Nr: 10 zu Berenbusch über
 einen Platz zur Vergrößerung  
 seines Gartens.
 
-                     Nachdem auf Ansuchen des Colons  
-                     Jobst Heinrich Krückeberg Nr. 10  
-                     zu Berenbusch, Amts Bückeburg,  
-                     von Gräfl. vormundschaftl. Rentcammer  
-                     bewilliget worden, daß demselben  
-                     zur Vergrößerung seines Gartens  
-                     und Hofraums zweÿ in der Dorfstraße  
-                     belegene Plätze ausgewiesen, und  
-                     dergestalt käuflich überlaßen werden  
-                     sollen, daß er jede Quadrat i Rüte  
-                     mit 24 Mariengroschen zu bezahlen  
-Expedirt p. Beÿer    habe; und hiernächst diese Plätze durch  
-                     einen beeidigten Landmeßer, und zwar  
-                     ersterer zur Vergrößerung seines  
-                     Gartens zu neunzehn Ruten 44 Fus dec:  
-                     und der andere zum Hofraum, zu  
-                     einer Rute 90 Fus dec: gros ausge-  
-                     meßen, auch das Kaufgeld nach dem  
-                     bestimten Preise mit vierzehn Rthlr  
-                     8 ugln 1d an Gräfln Cammercasse  
-                     erleget worden; wobeÿ gedachter  
-                     Colon Krückeberg verpflichtet ist  
-                     den von bemeldeten beiden Plätzen  
-                     angesetzten Rottzins und Kontri-  
-                     bution, auch sowohl gewöhnliche  
-                     als außerordentliche Abgaben  
-                     zu ...[continues on next image]
+                      Nachdem auf Ansuchen des Colons  
+                      Jobst Heinrich Krückeberg Nr. 10  
+                      zu Berenbusch, Amts Bückeburg,  
+                      von Gräfl. vormundschaftl. Rentcammer  
+                      bewilliget worden, daß demselben  
+                      zur Vergrößerung seines Gartens  
+                      und Hofraums zweÿ in der Dorfstraße  
+                      belegene Plätze ausgewiesen, und  
+                      dergestalt käuflich überlaßen werden  
+                      sollen, daß er jede Quadrat i Rüte  
+                      mit 24 Mariengroschen zu bezahlen  
+                      habe; und hiernächst diese Plätze durch  
+                      einen beeidigten Landmeßer, und zwar  
+                      ersterer zur Vergrößerung seines  
+                      Gartens zu neunzehn Ruten 44 Fus dec:  
+                      und der andere zum Hofraum, zu  
+                      einer Rute 90 Fus dec: gros ausge-  
+                      meßen, auch das Kaufgeld nach dem  
+                      bestimten Preise mit vierzehn Rthlr  
+                      8 ugln 1d an Gräfln Cammercasse  
+                      erleget worden; wobeÿ gedachter  
+                      Colon Krückeberg verpflichtet ist  
+                      den von bemeldeten beiden Plätzen  
+                      angesetzten Rottzins und Kontri-  
+                      bution, auch sowohl gewöhnliche  
+                      als außerordentliche Abgaben  
+                      zu ...[continues on next image]
+    
+Expidirt p. Beÿer    
 ____
 
 
@@ -60,7 +62,7 @@ of his garden.
                       of enlarging his garden and yard space,  
                       and that these plots be sold to him  
                       under the condition that he pay 24 Mariengroschen  
-Issued by Beÿer       per square rod; and that these plots  
+                      per square rod; and that these plots  
                       were then surveyed by a sworn land surveyor —  
                       the first, for enlarging his garden,  
                       measured nineteen rods and 44 feet,  
@@ -76,5 +78,6 @@ Issued by Beÿer       per square rod; and that these plots
                       contribution for the aforementioned plots,  
                       as well as both regular and extraordinary taxes and dues to
                       [continues on next page] 
+Issued by Beÿer       
 ____
 
